# ConsoleAppsGames

./: README.md  pyproject.toml
arcanoid/: main.py
base_tk/: base.py
finance_tk_sql/: finance_1.py  finance_2.py  finance_3.py  finance_5.py
games1/: action.py  enemy.py  hero.py  main.py  tk_main.py
knb/: knb.py
tetris/: main_lesson_1.py  main_lesson_2.py  main_lesson_3.py  main_lesson_4.py  main_lesson_5.py  main_lesson_6.py  main_pygame.py  main_tkinter.py
tk_gui/: button_label.py  clicker.py  entry.py  frame_grid_place.py  next_window.py  notepad_1.py  pack.py  place.py  progressbar.py  secundomer.py  text_file_menu.py  tk_ttk_classes.py  toplevel.py  translate.py
zmeyka_tk/: zmeyka_1.py  zmeyka_2.py  zmeyka_3.py  zmeyka_4.py  zmeyka_5.py
