[tool.poetry]
name = "solid-patterns"
version = "0.1.0"
description = ""
authors = ["kremniland <kremnilandk@gmail.com>"]
readme = "README.md"
packages = [{include = "solid_patterns"}]

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.1.1"
loguru = "^0.6.0"
colorama = "^0.4.6"
pygame = "^2.3.0"
googletrans = "^3.0.0"
pyttsx3 = "^2.90"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
